# idrive_backup

./: .gitignore  Cargo.toml  main.py
.github/workflows/: binaries.yml
src/: backup.rs  clean.rs  idrive_backup.timer  main.rs  restore.rs  restore_missing.rs
systemd/: idrive_backup.service
