[package]
name = "idrive_backup"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
edition = "2018"
resolver = "2"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "3.1", default-features = false, features = ["std", "cargo"] }
tempfile = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
quick-xml = { version = "0.23", features = ["serialize"] }

[profile.release]
opt-level = "s"
lto = true
